# aplicationServer

./: .travis.yml  README.md  testDocker
ApplicationServer/: .gitignore  CMakeLists.txt  Dockerfile  applicationServerLog_2017-04-24_11-51  docker-compose.yml  install.sh  installdocker.sh
ApplicationServer/lib/mongoose/: Request.cpp  Request.h
ApplicationServer/src/: CMakeLists.txt  main.cpp
ApplicationServer/src/Model/: CMakeLists.txt  Song.cpp  Song.h
ApplicationServer/src/controllers/: CMakeLists.txt  HelloWorldController.cpp  HelloWorldController.h  SongController.cpp  SongController.h
ApplicationServer/src/lib/: CMakeLists.txt
ApplicationServer/src/lib/mongoose/: JsonResponse.h  Request.cpp  Request.h
ApplicationServer/src/utils/: CMakeLists.txt  LoggerManager.cpp  LoggerManager.h  MongoManager.cpp  MongoManager.h  base64.cpp  base64.h
ApplicationServer/test/: CMakeLists.txt  SongControllerTest.cpp  SongControllerTest.h  main.cpp  mainTest.cpp
